added navabr styling

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -8,7 +8,9 @@
 
 // CMPS
 // navbar
-
+@import './cmps/navbar/navbar';
+@import './cmps/navbar/logo';
+@import './cmps/navbar/mobile-navbar';
 // overlay
 
 //PAGES
