added overlay styling

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -12,7 +12,8 @@
 @import './cmps/navbar/logo';
 @import './cmps/navbar/mobile-navbar';
 // overlay
-
+@import './cmps/overlay/dark-overlay';
+@import './cmps/overlay/strong-dark-overlay';
 //PAGES
 // Home
 
