added loader styling

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -14,6 +14,9 @@
 // overlay
 @import './cmps/overlay/dark-overlay';
 @import './cmps/overlay/strong-dark-overlay';
+
+@import './cmps/loader'
+
 //PAGES
 // Home
 
