added search teaser styling

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -15,9 +15,9 @@
 @import './cmps/overlay/dark-overlay';
 @import './cmps/overlay/strong-dark-overlay';
 
-@import './cmps/loader'
+@import './cmps/loader';
 
 //PAGES
 // Home
-
+@import './pages/home/home';
 // Stay
