image carousel styling

--- a/src/assets/style/pages/home/_home.scss
+++ b/src/assets/style/pages/home/_home.scss
@@ -1,3 +1,5 @@
 @import './cmps/search-teaser';
 @import './cmps/filters';
 @import './cmps/filter';
+@import './cmps/stays';
+@import './cmps/img-carousel';
