stay preview styling

--- a/src/assets/style/pages/home/_home.scss
+++ b/src/assets/style/pages/home/_home.scss
@@ -3,3 +3,5 @@
 @import './cmps/filter';
 @import './cmps/stays';
 @import './cmps/img-carousel';
+@import './cmps/stay-preview';
+@import './cmps/stay-skeleton';
