search expanded for dekstop style

--- a/src/assets/style/base/_vars.scss
+++ b/src/assets/style/base/_vars.scss
@@ -1,6 +1,6 @@
 $brand-color: #ff385c;
 $ui-brand-color: #222222;
-$navabar-height: 80px;
+$navbar-height: 80px;
 $layout-padding: 5rem;
 $text-muted: #717171;
 $sec-color: #717171;
