search expanded for dekstop style

--- a/src/assets/style/cmps/navbar/_navbar.scss
+++ b/src/assets/style/cmps/navbar/_navbar.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    height: $navabar-height;
+    height: $navbar-height;
     background: transparent;
     position: relative;
     height: 80px;
