search expanded style for mobile

--- a/src/assets/style/pages/home/_home.scss
+++ b/src/assets/style/pages/home/_home.scss
@@ -6,3 +6,4 @@
 @import './cmps/stay-preview';
 @import './cmps/stay-skeleton';
 @import './cmps/search-expanded';
+@import './cmps/search-expanded-mobile';
