no stays message style

--- a/src/assets/style/pages/home/_home.scss
+++ b/src/assets/style/pages/home/_home.scss
@@ -7,3 +7,5 @@
 @import './cmps/stay-skeleton';
 @import './cmps/search-expanded';
 @import './cmps/search-expanded-mobile';
+
+@import './cmps/no-stays-msg';
