search module style

--- a/src/assets/style/pages/home/_home.scss
+++ b/src/assets/style/pages/home/_home.scss
@@ -9,3 +9,8 @@
 @import './cmps/search-expanded-mobile';
 
 @import './cmps/no-stays-msg';
+
+@import './cmps/search-module';
+@import './cmps/search-location';
+@import './cmps/search-guests';
+@import './cmps/search-date-picker';
