modal filter style

--- a/src/assets/style/pages/home/_home.scss
+++ b/src/assets/style/pages/home/_home.scss
@@ -14,3 +14,6 @@
 @import './cmps/search-location';
 @import './cmps/search-guests';
 @import './cmps/search-date-picker';
+
+@import './cmps/counter';
+@import './cmps/modal-filter';
