stay header style

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -29,5 +29,6 @@
     padding-top: 32px;
 }
 
+@import './cmps/stay-header';
 
-@import './cmps/stay-skeleton-view'
+@import './cmps/stay-skeleton-view';
