stay info header style

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -32,4 +32,6 @@
 @import './cmps/stay-header';
 @import './cmps/stay-gallery';
 
+@import './cmps/stay-info-header';
+
 @import './cmps/stay-skeleton-view';
