stay info bonuses style

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -33,5 +33,6 @@
 @import './cmps/stay-gallery';
 
 @import './cmps/stay-info-header';
+@import './cmps/stay-info-bonuses';
 
 @import './cmps/stay-skeleton-view';
