stay info style

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -34,5 +34,10 @@
 
 @import './cmps/stay-info-header';
 @import './cmps/stay-info-bonuses';
+@import './cmps/stay-info-air-cover';
+@import './cmps/stay-info-summary';
+@import './cmps/stay-info-sleep';
+@import './cmps/stay-info-offering';
+@import './cmps/stay-info-calendar';
 
 @import './cmps/stay-skeleton-view';
