stay reserve style added

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -40,4 +40,6 @@
 @import './cmps/stay-info-offering';
 @import './cmps/stay-info-calendar';
 
+@import './cmps/stay-reserve';
+
 @import './cmps/stay-skeleton-view';
