stay review bar styling

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -43,5 +43,6 @@
 @import './cmps/stay-reserve';
 
 @import './cmps/stay-reviews';
+@import './cmps/stay-review-bar';
 
 @import './cmps/stay-skeleton-view';
