--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -44,5 +44,6 @@
 
 @import './cmps/stay-reviews';
 @import './cmps/stay-review-bar';
+@import './cmps/stay-review';
 
 @import './cmps/stay-skeleton-view';
