stay map styling + fixed styling bugs

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -45,5 +45,6 @@
 @import './cmps/stay-reviews';
 @import './cmps/stay-review-bar';
 @import './cmps/stay-review';
+@import './cmps/stay-map';
 
 @import './cmps/stay-skeleton-view';
