--- a/src/assets/style/pages/stay/cmps/_stay-review-bar.scss
+++ b/src/assets/style/pages/stay/cmps/_stay-review-bar.scss
@@ -1,7 +1,7 @@
 .stay-review-bar {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin-right: 8%;
     padding-right: 8%;
 
