stay host styling added

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -46,5 +46,6 @@
 @import './cmps/stay-review-bar';
 @import './cmps/stay-review';
 @import './cmps/stay-map';
+@import './cmps/stay-host';
 
 @import './cmps/stay-skeleton-view';
