added styling to the things to know section

--- a/src/assets/style/pages/stay/_stay.scss
+++ b/src/assets/style/pages/stay/_stay.scss
@@ -47,5 +47,6 @@
 @import './cmps/stay-review';
 @import './cmps/stay-map';
 @import './cmps/stay-host';
+@import './cmps/stay-things-to-know';
 
 @import './cmps/stay-skeleton-view';
