--- a/src/assets/style/pages/home/cmps/_counter.scss
+++ b/src/assets/style/pages/home/cmps/_counter.scss
@@ -2,11 +2,11 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    justify-content: center;
+    justify-items: center;
     gap: 0.5rem;
 
     p {
-        font-size: 16px !important;
+        font-size: 16px!important;
     }
 
     button {
