--- a/src/assets/style/pages/stay/cmps/_reservation-complete.scss
+++ b/src/assets/style/pages/stay/cmps/_reservation-complete.scss
@@ -17,7 +17,7 @@
     }
 
     img {
-        &.logo {
+        &.logo-img {
             width: 32px;
             height: 32px;
             margin-bottom: 24px;
@@ -35,6 +35,7 @@
 
     h1 {
         padding-bottom: 0;
+        font-size: 2em;
     }
 
     .sub-heading {
