fixed more filters button style

--- a/src/assets/style/pages/home/cmps/_filters.scss
+++ b/src/assets/style/pages/home/cmps/_filters.scss
@@ -103,7 +103,7 @@
             margin-left: auto;
 
             @media screen and (max-width: $mobile-size) {
-                padding-left: 0.5rem;
+                padding: 0.5rem;
                 border-radius: 50%;
             }
 
